k8s/overlays/dev/backend/image-policy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-backend
spec:
  template:
    spec:
      containers:
      - name: backend
        imagePullPolicy: Always
