k8s/overlays/dev/backend/image-pullsecret-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-backend
spec:
  template:
    spec:
      imagePullSecrets:
      - name: ghcr-cred
