k8s/overlays/dev/backend/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-backend
spec:
  type: NodePort
  ports:
  - name: http-ext
    protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 31000
