k8s/overlays/dev/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-ingress
spec:
  rules:
  - host: dev.school-app.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: school-backend
            port:
              number: 80
